<resources>
    <string name="app_name">My Calculator</string>
    <string name="seven">7</string>
    <string name="_8">8</string>
    <string name="slash">/</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="mul">*</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="minus">-</string>
    <string name="_0">0</string>
    <string name="clr">Clr</string>
    <string name="del">Del</string>
    <string name="plus">+</string>
    <string name="equals">=</string>
    <string name="dot">.</string>
</resources>