<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".MainActivity"
    android:background="@color/bg"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:textSize="35sp"
        android:padding="10dp"
        android:textColor="@color/text"
        android:gravity="end|bottom"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            app:cornerRadius="10dp"
            app:strokeColor="@color/text"
            app:strokeWidth="2dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="15dp"
            android:layout_margin="5dp"
            android:text="@string/seven"
            android:textSize="18sp"
            android:onClick="onDigitClick"
            tools:ignore="NestedWeights" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            app:cornerRadius="10dp"
            app:strokeColor="@color/text"
            app:strokeWidth="2dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="15dp"
            android:layout_margin="5dp" 
            android:text="@string/_8"
            android:textSize="18sp"
            android:onClick="onDigitClick"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            app:cornerRadius="10dp"
            app:strokeColor="@color/text"
            app:strokeWidth="2dp"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:layout_margin="5dp" 
            android:layout_weight="1"
            android:text="@string/_9"
            android:textSize="18sp"
            android:onClick="onDigitClick"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            app:cornerRadius="10dp"
            app:strokeColor="@color/text"
            app:strokeWidth="2dp"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:layout_margin="5dp" 
            android:layout_weight="1"
            android:text="@string/slash"
            android:textSize="18sp"
            android:onClick="onOperatorClicked"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            app:cornerRadius="10dp"
            app:strokeColor="@color/text"
            app:strokeWidth="2dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="15dp"
            android:layout_margin="5dp" 
            android:text="@string/_4"
            android:textSize="18sp"
            android:onClick="onDigitClick"
            tools:ignore="NestedWeights" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            app:cornerRadius="10dp"
            app:strokeColor="@color/text"
            app:strokeWidth="2dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="15dp"
            android:layout_margin="5dp" 
            android:text="@string/_5"
            android:textSize="18sp"
            android:onClick="onDigitClick"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            app:cornerRadius="10dp"
            app:strokeColor="@color/text"
            app:strokeWidth="2dp"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:layout_margin="5dp" 
            android:layout_weight="1"
            android:text="@string/_6"
            android:textSize="18sp"
            android:onClick="onDigitClick"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            app:cornerRadius="10dp"
            app:strokeColor="@color/text"
            app:strokeWidth="2dp"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:layout_margin="5dp" 
            android:layout_weight="1"
            android:text="@string/mul"
            android:textSize="18sp"
            android:onClick="onOperatorClicked"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            app:cornerRadius="10dp"
            app:strokeColor="@color/text"
            app:strokeWidth="2dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="15dp"
            android:layout_margin="5dp" 
            android:text="@string/_1"
            android:textSize="18sp"
            android:onClick="onDigitClick"
            tools:ignore="NestedWeights" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            app:cornerRadius="10dp"
            app:strokeColor="@color/text"
            app:strokeWidth="2dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="15dp"
            android:layout_margin="5dp" 
            android:text="@string/_2"
            android:textSize="18sp"
            android:onClick="onDigitClick"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            app:cornerRadius="10dp"
            app:strokeColor="@color/text"
            app:strokeWidth="2dp"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:layout_margin="5dp" 
            android:layout_weight="1"
            android:text="@string/_3"
            android:textSize="18sp"
            android:onClick="onDigitClick"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSub"
            android:layout_width="0dp"
            app:cornerRadius="10dp"
            app:strokeColor="@color/text"
            app:strokeWidth="2dp"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:layout_margin="5dp" 
            android:layout_weight="1"
            android:text="@string/minus"
            android:textSize="18sp"
            android:onClick="onOperatorClicked"
            />
    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_weight="1"
    >
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnZero"
        android:layout_width="0dp"
            app:cornerRadius="10dp"
            app:strokeColor="@color/text"
            app:strokeWidth="2dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="15dp"
        android:layout_margin="5dp" 
        android:text="@string/_0"
        android:textSize="18sp"
            android:onClick="onDigitClick"
        tools:ignore="NestedWeights" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnClear"
        android:layout_width="0dp"
            app:cornerRadius="10dp"
            app:strokeColor="@color/text"
            app:strokeWidth="2dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="15dp"
        android:layout_margin="5dp" 
        android:text="@string/clr"
        android:textSize="15sp"
        android:onClick="onClearClick"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDel"
        android:layout_width="0dp"
            app:cornerRadius="10dp"
            app:strokeColor="@color/text"
            app:strokeWidth="2dp"
        android:layout_height="match_parent"
        android:padding="15dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:text="@string/del"
        android:textSize="18sp"
        android:onClick="onDelClicked"
        />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            app:cornerRadius="10dp"
            app:strokeColor="@color/text"
            app:strokeWidth="2dp"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/plus"
            android:textSize="18sp"
            android:onClick="onOperatorClicked"
            />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEqual"
            android:layout_width="0dp"
            app:cornerRadius="10dp"
            app:strokeColor="@color/text"
            app:strokeWidth="2dp"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:layout_margin="2dp"
            android:layout_weight="3.2"
            android:text="@string/equals"
            android:textSize="50sp"
            android:onClick="onOperatorClicked"
            tools:ignore="NestedWeights" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            app:cornerRadius="10dp"
            app:strokeColor="@color/text"
            app:strokeWidth="2dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/dot"
            android:textSize="40sp"
            android:onClick="onDigitClick"
            />
    </LinearLayout>
</LinearLayout>